--- a/projects/angular/src/layout/tabs/_variables.tabs.scss
+++ b/projects/angular/src/layout/tabs/_variables.tabs.scss
@@ -6,7 +6,7 @@
 $clr-nav-box-shadow-color: $clr-color-neutral-400 !default;
 $clr-nav-active-box-shadow-color: $clr-color-action-600 !default;
 
-$clr-nav-link-color: $clr-color-neutral-600 !default;
+$clr-nav-link-color: $clr-color-neutral-700 !default;
 $clr-nav-link-active-color: $clr-color-neutral-1000 !default;
 
 $clr-nav-link-font-size: $clr-p1-font-size !default;
